force-app/main/default/objects/Assignment__c/fields/ConferenceLink__c.field-meta.xml
<CustomField>
    <fullName>ConferenceLink__c</fullName>
    <label>Conference Link</label>
    <type>Url</type>
</CustomField>