force-app/main/default/objects/Assignment__c/fields/EndTime__c.field-meta.xml
<CustomField>
    <fullName>EndTime__c</fullName>
    <label>End Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>