force-app/main/default/objects/Assignment__c/fields/Maximum_Score__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Score__c</fullName>
    <label>Maximum Score</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>