force-app/main/default/objects/Assignment__c/fields/TaskDescription__c.field-meta.xml
<CustomField>
    <fullName>TaskDescription__c</fullName>
    <label>Task Description</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>