force-app/main/default/objects/Assignment__c/fields/Teacher__c.field-meta.xml
<CustomField>
    <fullName>Teacher__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Teacher</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Assignments</relationshipLabel>
    <relationshipName>Assignments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>