force-app/main/default/objects/Assignment__c/recordTypes/LaboratoryWork.recordType-meta.xml
<RecordType>
    <fullName>LaboratoryWork</fullName>
    <active>true</active>
    <label>Laboratory Work</label>
</RecordType>