force-app/main/default/objects/Assignment__c/recordTypes/PracticalWork.recordType-meta.xml
<RecordType>
    <fullName>PracticalWork</fullName>
    <active>true</active>
    <label>Practical Work</label>
</RecordType>